Fix button text alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -176,6 +176,7 @@ Carousel
   font-weight: bold;
   color: white;
   cursor: pointer;
+  text-align: center;
 }
 
 #button-next {
@@ -189,6 +190,7 @@ Carousel
   font-weight: bold;
   color: white;
   cursor: pointer;
+  text-align: center;
 }
 
 #carousel-header {
